--- a/track.html
+++ b/track.html
@@ -16,15 +16,10 @@
     </nav>
   </header>
 
-  <main class="content track-details">
-    <img src="cover.jpg" alt="Обкладинка треку" class="track-cover">
-    <div class="track-info">
-      <h1>Назва треку</h1>
-      <p><strong>Виконавець:</strong> Прикладовий Артист</p>
-      <p><strong>Жанр:</strong> Інді</p>
-      <p><strong>Опис:</strong> Атмосферна композиція з глибоким звучанням і спокійним ритмом.</p>
-      <audio controls src="track.mp3"></audio>
-    </div>
+  <main class="content track-details" id="trackDetails">
+    <!-- Детали трека будут загружены через JavaScript -->
   </main>
+
+  <script src="track-script.js"></script>
 </body>
 </html>
